--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
   .dropzone h2{margin:0;font-size:16px;align-self:flex-start}
   #imagenes{display:flex;flex-wrap:wrap;gap:12px;justify-content:center;margin-top:18px}
   .item{width:110px;height:110px;border-radius:var(--card-radius);display:flex;align-items:center;justify-content:center;color:#fff;font-weight:700;text-align:center;padding:8px;box-sizing:border-box;user-select:none;touch-action:none;cursor:grab;position:relative}
-  .item-wrapper{position:relative;display:inline-block} /* para marcador absoluto */
-  .marker{position:absolute;top:-6px;right:-6px;font-size:26px;font-weight:900;z-index:10;pointer-events:none}
+  .item-wrapper{position:relative;display:inline-block}
   #versiculos{margin:20px auto 0;background:#fff;padding:12px;border-radius:10px;max-width:900px;text-align:left;display:block}
   #versiculos h3{margin:0 0 8px}
   #versiculos-items p{margin:6px 0}
@@ -26,7 +25,6 @@
   #gameOverContent{background:#fff;padding:22px;border-radius:12px;width:90%;max-width:420px;text-align:center;animation:pop .35s ease}
   @keyframes pop{from{transform:scale(.85);opacity:0}to{transform:scale(1);opacity:1}}
   button{margin-top:12px;padding:10px 16px;border-radius:8px;border:0;background:#1976d2;color:#fff;font-weight:700;cursor:pointer}
-  /* responsive */
   @media (max-width:600px){
     .dropzone{flex-basis:90%}
     .item{width:96px;height:96px}
@@ -35,7 +33,9 @@
 </head>
 <body>
 <div class="top">
-  <h1>La exhortación de Pablo en Antioquía (3ª Parte)</h1>
+  <h1>  La exhortación de Pablo en Antioquía (3ª. Parte)<br>
+  Regocijo y persecución por la Palabra<br>
+  Hechos 13:42-52</h1>
   <div id="timer">Tiempo: 60</div>
 
   <div class="container">
@@ -59,7 +59,6 @@
     <div class="item-wrapper"><div class="item" data-type="negativo" style="background:#D81B60">Persecución</div></div>
   </div>
 
-  <!-- sonidos opcionales -->
   <audio id="correctSound" src="correct.mp3" preload="auto"></audio>
   <audio id="wrongSound" src="wrong.mp3" preload="auto"></audio>
 
@@ -107,10 +106,9 @@ function tick(){
   if(gameOver) return;
   timer--;
   timerEl.textContent = "Tiempo: " + timer;
-  if(timer<=0){ clearInterval(countdown); finishGame(); }
+  if(timer<=0){ clearInterval(countdown); finishGame(true); }
 }
 
-/* ====== Drag & Touch ====== */
 let current = null;
 let offsetX = 0, offsetY = 0;
 let originalParent = null;
@@ -173,6 +171,7 @@ function onEnd(e){
     wrapper.style.top = "";
     wrapper.style.zIndex = "";
     markResult(item, placedZone);
+    checkAllPlaced();
   } else {
     imgsContainer.appendChild(wrapper);
     wrapper.style.position = "static";
@@ -192,19 +191,10 @@ document.addEventListener("touchmove",onMove,{passive:false});
 document.addEventListener("mouseup",onEnd);
 document.addEventListener("touchend",onEnd);
 
-function markResult(item, zone){
+function markResult(item, zone, forceWrong=false){
   if(item.dataset.locked==="true") return;
   const key = item.innerText.trim();
-  const correct = item.dataset.type===zone.dataset.type;
-
-  const wrapper = item.parentElement;
-  if(!wrapper.querySelector(".marker")){
-    const marker = document.createElement("div");
-    marker.className="marker";
-    marker.textContent = correct?"✔":"✘";
-    marker.style.color = correct?"green":"red";
-    wrapper.appendChild(marker);
-  }
+  const correct = !forceWrong && (item.dataset.type===zone.dataset.type);
 
   item.dataset.locked="true";
   item.style.cursor="default";
@@ -219,13 +209,19 @@ function markResult(item, zone){
   }catch(err){}
 
   if(correct) correctCount++; else errorCount++;
-
-  if((correctCount+errorCount)>=items.length) finishGame();
 }
 
-function finishGame(){
+function checkAllPlaced(){
+  if(items.every(it=>it.dataset.locked==="true")){
+    finishGame(false);
+  }
+}
+
+function finishGame(timeout=false){
+  if(gameOver) return;
   gameOver = true;
   clearInterval(countdown);
+
   items.forEach(it=>{
     if(it.dataset.locked!=="true"){
       const wrapper = it.parentElement;
@@ -234,13 +230,14 @@ function finishGame(){
       wrapper.style.position="static";
       wrapper.style.left="";
       wrapper.style.top="";
-      markResult(it,targetZone);
+      markResult(it, targetZone, timeout);
     }
   });
 
   let msg = "🎉 ¡Juego completado! 🎉";
   if(errorCount>0) msg += `\nTuvo ${errorCount} error(es). ¡Repasa el pasaje y vuelve a intentarlo!`;
-  else msg += "\n¡Excelente, sin errores!";
+  if(timeout && correctCount===0) msg = "⏰ ¡Tiempo agotado! Todos los elementos fueron incorrectos.";
+
   gameOverText.innerText = msg;
   modal.style.display="flex";
 }
@@ -260,8 +257,6 @@ restartBtn.addEventListener("click",()=>{
     const it = w.querySelector(".item");
     it.dataset.locked="";
     it.style.cursor="grab";
-    const marker = w.querySelector(".marker");
-    if(marker) marker.remove();
   });
 });
 </script>
