--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="item-wrapper"><div class="item" data-type="positivo" style="background:#FDD835;color:#111">Gozo</div></div>
 
     <div class="item-wrapper"><div class="item" data-type="negativo" style="background:#FB8C00">Celos</div></div>
-    <div class="item-wrapper"><div class="item" data-type="negativo" style="background:#8E24AA">Contradicción</div></div>
+    <div class="item-wrapper"><div class="item" data-type="negativo" style="background:#8E24AA">Contradic<br>ción</div></div>
     <div class="item-wrapper"><div class="item" data-type="negativo" style="background:#00ACC1">Blasfemia</div></div>
     <div class="item-wrapper"><div class="item" data-type="negativo" style="background:#D81B60">Persecución</div></div>
   </div>
@@ -65,7 +65,7 @@
   <audio id="wrongSound" src="wrong.mp3" preload="auto"></audio>
 
   <div id="versiculos">
-    <h3>Versículos (se muestran conforme coloques):</h3>
+    <h3>Versículos de referencia:</h3>
     <div id="versiculos-items"></div>
   </div>
 
